# motion-detector-tracker

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
docker/: Dockerfile
include/: camera.h  gui.h  motion_detect.h  motion_track.h  serial.h
include/coordinates/: FieldOfViewSectors.h
include/directions/: DualAxisMovement.h  PanDirections.h  PitchDirections.h
include/motionDetector/: MotionDetector.h
include/motionTracker/: MotionTracker.h
include/serialInterface/: ObservableSerialConnection.hpp  SerialInterface.h  serial_lowLevel.h
lib/observer/: BaseObserver.hpp
lib/observer/observable/: BaseObservable.hpp
src/: CMakeLists.txt  gui.cpp  main.cpp  motion_detect.cpp  motion_track.cpp  serial  serial.cpp
src/__deprecated__/: main.cpp
src/app/: CMakeLists.txt
src/app/src/: Main.cpp
src/camera/: CMakeLists.txt
src/camera/include/: Camera.hpp  Event.hpp  NewFrameEvent.hpp
src/camera/src/: Camera.cpp
src/core/: CMakeLists.txt
src/core/include/: Core.hpp
src/core/src/: Core.cpp
src/directions/: DualAxisMovement.cpp
src/display/: gui.cpp
src/motionDetector/: MotionDetector.cpp
src/motionTracker/: MotionTracker.cpp
src/motiondetect/: CMakeLists.txt
src/motiondetect/include/: MotionDetect.hpp
src/motiondetect/src/: MotionDetect.cpp
src/motiontrack/src/: MotionTrack.cpp
src/serialInterface/: ObservableSerialConnection.cpp  SerialInterface.cpp  serial_lowlevel.cpp
src/ui/: CMakeLists.txt
src/ui/include/: CameraDrawingArea.hpp  MainWindow.hpp  gui.h
src/ui/src/: CameraDrawingArea.cpp  Main.cpp  MainWindow.cpp  gui.cpp
