cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 11)
project( cpp_test )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(include)
file(GLOB SOURCES "src/*.cpp")
add_executable( Main.out ${SOURCES} )
target_link_libraries( Main.out ${OpenCV_LIBS} )
